--- a/zcontact.html
+++ b/zcontact.html
@@ -11,15 +11,19 @@ group: navigation
   <td><img src="/images/liubin.jpg"></td>
 
   <td>
-  <br/><br/>
   <h3>Bin, Liu</h3>
 <p>
 <big>爱好：</big><em>读书、旅游、摄影、电影</em><br/>
 <big>个人宣言：</big><em>化整为零，做一个牛逼的人</em><br/>
+<big>博客定位：</big><em>主要用于学习、交流技术</em><br/>
 <big>Research interests:</big> <em>STM study of strongly correlated systems</em><br/>
 <big>Email:</big> <a href="mailto:bliu238@gmail.com"><em>bliu238@gmail.com</em></a><br/>
 <big>Weibo:</big> <a href="http://weibo.com/1785066155" target="_blank" title="甄谨言的新浪微博"><em>甄谨言的新浪微博</em></a>
 </p>
+这是一个开放的个人主页，如果您对网页设计有什么想法，欢迎留言^_^</br>(请点击[Feedback]按钮给我的 Github 空间留言)
+<form action="https://github.com/Adominick/Feedback/issues/new" align="right" target="_blank">
+    <input class="btn" type="submit" value="Feedback">
+</form>
   </td>
 </tr>
 </table>
