--- a/zcontact.html
+++ b/zcontact.html
@@ -5,8 +5,8 @@ header: Contact me
 group: navigation
 ---
 {% include JB/setup %}
-
-<table>
+<center>
+<table >
 <tr>
   <td><img src="/images/liubin.jpg"></td>
 
@@ -27,3 +27,4 @@ group: navigation
   </td>
 </tr>
 </table>
+</center>
