--- a/zcontact.html
+++ b/zcontact.html
@@ -18,7 +18,8 @@ group: navigation
 <big>博客定位：</big><em>主要用于学习、交流技术</em><br/>
 <big>Research interests:</big> <em>STM study of strongly correlated systems</em><br/>
 <big>Email:</big> <a href="mailto:bliu238@gmail.com"><em>bliu238@gmail.com</em></a><br/>
-<big>Weibo:</big> <a href="http://weibo.com/1785066155" target="_blank" title="甄谨言的新浪微博"><em>甄谨言的新浪微博</em></a>
+<big>Weibo:</big> <a href="http://weibo.com/1785066155" target="_blank" title="甄谨言的新浪微博"><em>甄谨言的新浪微博</em></a><br/>
+<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=287729967&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:287729967:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a>
 </p>
 这是一个开放的个人主页，如果您对网页设计有什么想法，欢迎留言^_^</br>(请点击[Feedback]按钮给我的 Github 空间留言)
 <form action="https://github.com/Adominick/Feedback/issues/new" align="right" target="_blank">
