--- a/zcontact.html
+++ b/zcontact.html
@@ -14,7 +14,7 @@ group: navigation
   <h3>Bin, Liu</h3>
 <p>
 <big>爱好：</big><em>读书、旅游、摄影、电影</em><br/>
-<big>个人宣言：</big><em>化整为零，做一个牛逼的人</em><br/>
+<big>个人宣言：</big><em>stay foolish, stay hungry</em><br/>
 <big>博客定位：</big><em>主要用于学习、交流技术</em><br/>
 <big>Research interests:</big> <em>STM study of strongly correlated systems</em><br/>
 <big>Email:</big> <a href="mailto:bliu238@gmail.com"><em>bliu238@gmail.com</em></a><br/>
